create contact us page and admin mailer to send email of contact us form

--- a/app/assets/stylesheets/search_subtrips.css.scss
+++ b/app/assets/stylesheets/search_subtrips.css.scss
@@ -207,8 +207,8 @@ $btn-primary-darker:  darken($btn-primary-color, 8%);
 			}
 			.old{
 				position: absolute;
-				top: 6px;
-				right: 91px;
+				top: 3px;
+				left: 4px;
 			}
 			.ratingSmall{
 				position: absolute;
