--- a/app/views/homes/show.html.erb
+++ b/app/views/homes/show.html.erb
@@ -20,7 +20,7 @@
 
 	<div class="col-md-7">
 		<div id="insert_trip" >
-			<%= image_tag(IMAGES_PATH+"passenger_man.png", class: "passenger passenger_man")	%>
+			<img src="<%= IMAGES_PATH+"passenger_man.png" %> " alt="" style= "<%= lang_other_side %> : -12px;" class= "passenger passenger_man">
 			<%= render 'trip_insert' %>	
 		</div>
 		<div id="sample_trips">
