--- a/app/assets/stylesheets/costum.css.scss
+++ b/app/assets/stylesheets/costum.css.scss
@@ -24,6 +24,7 @@ a{
   box-shadow: 0 0 3px #999999;    
   width: auto;
   padding: 0 15px;
+  max-width: 1170px;
 }
 
 img.logo{
@@ -130,59 +131,3 @@ select.datepicker {
     border-radius: 5px;
     padding: 7px 2px;
 }
-
-@media (min-width: 968px) {
-    .my-col-md-1 { width: 4.166666667%; margin-bottom: 10px;}
-    .my-col-md-2 { width: 8.333333333%; margin-bottom: 10px;}
-    .my-col-md-3 { width: 12.500000001%; margin-bottom: 10px;}
-    .my-col-md-4 { width: 16.666666667%; margin-bottom: 10px;}
-    .my-col-md-5 { width: 20.833333334%; margin-bottom: 10px;}
-    .my-col-md-6 { width: 25.000000001%; margin-bottom: 10px;}
-    .my-col-md-7 { width: 29.166666668%; margin-bottom: 10px;}
-    .my-col-md-8 { width: 33.333333333%; margin-bottom: 10px;}
-    .my-col-md-9 { width: 37.500000002%; margin-bottom: 10px;}
-    .my-col-md-10 { width: 41.666666669%; margin-bottom: 10px;}
-    .my-col-md-11 { width: 45.833333336%; margin-bottom: 10px;}
-    .my-col-md-12 { width: 50%; margin-bottom: 10px;}
-    .my-col-md-13 { width: 54.166666667%; margin-bottom: 10px;}
-    .my-col-md-14 { width: 58.333333334%; margin-bottom: 10px;}
-    .my-col-md-15 { width: 62.500000001%; margin-bottom: 10px;}
-    .my-col-md-16 { width: 66.666666667%; margin-bottom: 10px;}
-    .my-col-md-17 { width: 70.833333335%; margin-bottom: 10px;}
-    .my-col-md-18 { width: 75.000000002%; margin-bottom: 10px;}
-    .my-col-md-19 { width: 79.166666669%; margin-bottom: 10px;}
-    .my-col-md-20 { width: 83.333333336%; margin-bottom: 10px;}
-    .my-col-md-21 { width: 87.500000003%; margin-bottom: 10px;}
-    .my-col-md-22 { width: 91.66666667%; margin-bottom: 10px;}
-    .my-col-md-23 { width: 95.833333337%; margin-bottom: 10px;}
-    .my-col-md-24 { width: 100%; margin-bottom: 10px;}
-}
-
-@media (min-width: 1170px) {
-    .my-col-lg-1 { width: 4.166666667%; }
-    .my-col-lg-2 { width: 8.333333333%; }
-    .my-col-lg-3 { width: 12.500000001%; }
-    .my-col-lg-4 { width: 16.666666667%; }
-    .my-col-lg-5 { width: 20.833333334%; }
-    .my-col-lg-6 { width: 25.000000001%; }
-    .my-col-lg-7 { width: 29.166666668%; }
-    .my-col-lg-8 { width: 33.333333333%; }
-    .my-col-lg-9 { width: 37.500000002%; }
-    .my-col-lg-10 { width: 41.666666669%; }
-    .my-col-lg-11 { width: 45.833333336%; }
-    .my-col-lg-12 { width: 50%; }
-    .my-col-lg-13 { width: 54.166666667%; }
-    .my-col-lg-14 { width: 58.333333334%; }
-    .my-col-lg-15 { width: 62.500000001%; }
-    .my-col-lg-16 { width: 66.666666667%; }
-    .my-col-lg-17 { width: 70.833333335%; }
-    .my-col-lg-18 { width: 75.000000002%; }
-    .my-col-lg-19 { width: 79.166666669%; }
-    .my-col-lg-20 { width: 83.333333336%; }
-    .my-col-lg-21 { width: 87.500000003%; }
-    .my-col-lg-22 { width: 91.66666667%; }
-    .my-col-lg-23 { width: 95.833333337%; }
-    .my-col-lg-24 { width: 100%; }
-}
-
-
