--- a/app/views/search_subtrips/_search_form_with_autocomplete.html.erb
+++ b/app/views/search_subtrips/_search_form_with_autocomplete.html.erb
@@ -1,5 +1,5 @@
 <!-- Origin -->
-<div class="origin_input col-sm-6  my-col-md-12 my-col-lg-8">
+<div class="origin_input col-sm-6  col-md-6 col-lg-4">
 	<div class="glyph-map pull-<%= lang_side %>"></div>
 	<%= f.input :origin_address,:label => false, required: false, placeholder:t("search_subtrips.form.mode.autocomplete.placeholder.origin"),  input_html: {class: "form-control", value: @search_subtrip.origin_address} %>					
 	<div class=" cycle <%= lang_other_side %>" style="border:0;<%= lang_other_side %>:14px;">
@@ -9,7 +9,7 @@
 </div>
 
 <!-- Destination -->
-<div class=" destination_input col-sm-6  my-col-md-12 my-col-lg-8">
+<div class=" destination_input col-sm-6  col-md-6 col-lg-4">
 	<div class="glyph-map pull-<%= lang_side %>"></div>
 	<%= f.input :destination_address,:label => false,required: false, placeholder: t("search_subtrips.form.mode.autocomplete.placeholder.destination"), input_html: {class: "form-control", value: @search_subtrip.destination_address} %>
 	<div class=" cycle <%= lang_other_side %>"  style="border:0;<%= lang_other_side %>:14px;">
