--- a/app/views/search_subtrips/search.html.erb
+++ b/app/views/search_subtrips/search.html.erb
@@ -1,17 +1,15 @@
-<%#= request.remote_ip %>
-<%#= Geocoder.search("77.182.200.130").first.try(:latitude) %>
 <%= render partial: 'search_form', locals:{ search_subtrip: @search_subtrip  } %>
 
 <div id="search_subtrips">
 	<div class="sidebar col-sm-2">
-		<div class="panel panel-default ">
+<!-- 		<div class="panel panel-default ">
 		  <div class="panel-heading">
-		    <h3 class="panel-title"><%= t '.search_filters' %></h3>
+		    <h3 class="panel-title"><%#= t '.search_filters' %></h3>
 		  </div>
 		  <div class="panel-body">
-		    <%= t '.comming_soon' %>
+		    <%#= t '.comming_soon' %>
 		  </div>
-		</div>	
+		</div>	 -->
 	</div>
 
 	<div class="content col-sm-10 col-lg-8">
