--- a/app/views/vehicles/new.html.erb
+++ b/app/views/vehicles/new.html.erb
@@ -12,7 +12,7 @@
 				<div class="tab-content">
 					<%= error_messages_for(@vehicle) %>
 					<%= simple_form_for @vehicle,  url: {action: "create"}, 
-					  html: { class: 'form-horizontal' },
+					  html: { class: 'form-horizontal', id: "vehicle_form" },
 					  defaults: { 
 						  wrapper_html: { class: 'form-group' }, 
 						  input_html:   { class: 'form-control col-sm-7' },
