--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -1,9 +1,12 @@
-<% if can? :edit, @page %>
-	<%= link_to 'Edit', edit_page_path(@page) %> |
-	<%= link_to 'Back', pages_path %>
-<% end %>
-
-<h2> <%= @page.name %> </h2>
 <div id="pages">
-	<%= @page.content.html_safe %>
+
+	<% if can? :edit, @page %>
+		<%= link_to 'Edit', edit_page_path(@page) %> |
+		<%= link_to 'Back', pages_path %>
+	<% end %>
+
+	<h1> <%= @page.name %> </h1>
+	<div id="content">
+		<%= @page.content.html_safe %>
+	</div>
 </div>
