add explaination to contact us and account request for companies

--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -6,6 +6,13 @@
 		text-align: center;
 		color: #5F3D11;
 	}
+	#form-explanation{
+		p{
+			color: #25462F;
+			line-height: 2em;
+		}		
+
+	}
 	#content{
 		h2{
 			color: #4C9768;
