--- a/app/views/application/_footer.html.erb
+++ b/app/views/application/_footer.html.erb
@@ -9,6 +9,7 @@
           <ul>
             <li><%= link_to t('.how_it_works_for_drivers'), page_path("how-it-works-for-drivers"), class: "footer_list" %></li>
             <li><%= link_to t('.create_profile'), edit_user_registration_path, class: "footer_list" %></li>
+            <li><%= link_to t('.ladies_only'), page_path("ladies_only"), class: "footer_list" %></li>
             <li><%= link_to t('.enter_ride'), trips_start_new_trip_path, class: "footer_list" %></li>
           </ul>
         </div>
