fix upload form on image for vehicle

--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -18,10 +18,14 @@
 			color: #4C9768;
 			font-weight: bold;	
 		}
-		p{
+		p, li{
 			padding: 10px 20px;
 			color: #25462F;
 			line-height: 2em;
 		}		
+		a{
+			color: #006AC5;
+			font-weight: bold;
+		}
 	}
 }
