--- a/app/views/vehicles/_show.html.erb
+++ b/app/views/vehicles/_show.html.erb
@@ -42,7 +42,12 @@
 
           <div class="col-md-6">
             <%= link_to (image_tag user.vehicle.image.url(:normal)), user.vehicle.image.url(:original) %> <br>
-            
+            <% if can? :edit, user.vehicle %>
+              <%= simple_form_for(:vehicle, url: user_vehicles_path(user), html: { method: :put, class: "vehicle_upload_form" } ) do |f| %>
+                <%= f.input :image, as: :file, label: false, input_html: { class: 'image_upload_button' } %>
+                <%= f.button :submit, "Please wait", disabled: true, class: 'btn-primary image_upload_submit' %>
+              <% end %>
+            <% end %>
           </div>      
         <% else %>
           <p><%= t('.there_is_no_car_registered.') %></p>
