fix bug in vehicle create user obj was nil

--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -18,11 +18,15 @@
 			color: #4C9768;
 			font-weight: bold;	
 		}
-		p, li{
+		p{
 			padding: 10px 20px;
 			color: #25462F;
 			line-height: 2em;
 		}		
+		li{
+			padding: 0px 0px;
+			color: #25462F;
+		}
 		a{
 			color: #006AC5;
 			font-weight: bold;
