add medium for images in ckedit

--- a/app/views/application/_navbar.html.erb
+++ b/app/views/application/_navbar.html.erb
@@ -24,7 +24,7 @@
           <%= render 'popup_signin' %>
           <li><%= link_to t("navbar.user.sign_up"), new_user_registration_path %></li>
   			<% end %>	
-        <li><%= link_to t("navbar.how_it_works"), page_path('how_does_hamsafaryab_work') %></li>
+        <li class="hidden-sm"><%= link_to t("navbar.how_it_works"), page_path('how_does_hamsafaryab_work') %></li>
 
       </ul>
 
