--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -14,6 +14,11 @@
 
 	}
 	#content{
+		img.guide{
+			border: 2px solid #E4E4E4;
+			border-radius: 4px;
+			padding: 1px;
+		}
 		h2{
 			color: #4C9768;
 			font-weight: bold;	
@@ -22,6 +27,9 @@
 			padding: 10px 20px;
 			color: #25462F;
 			line-height: 2em;
+			li{
+				line-height: 2em;
+			}
 		}		
 		li{
 			padding: 0px 0px;
