add second part of address to origin and destination in subtrip

--- a/app/assets/stylesheets/search_subtrips.css.scss
+++ b/app/assets/stylesheets/search_subtrips.css.scss
@@ -178,6 +178,11 @@ $btn-primary-darker:  darken($btn-primary-color, 8%);
 				.to{
 					text-align: center;
 				}
+				.from, .to{
+					small{
+						display: inline-block;
+					}
+				}
 				td{
 					border: 0;
 					padding:  0 5px;
