--- a/app/views/application/_popup_signin.html.erb
+++ b/app/views/application/_popup_signin.html.erb
@@ -1,5 +1,5 @@
 <li id="popup_signin" class="dropdown">
-  <a id="popup_signin_button" data-toggle="dropdown" class="dropdown-toggle" href="#"><%= t 'devise.sessions.form.sign_in' %><b class="caret"></b></a>
+  <a id="popup_signin_button" data-toggle="dropdown" class="dropdown-toggle text-nav " href="#"><%= t 'devise.sessions.form.sign_in' %><b class="caret"></b></a>
   <ul id="signin-dropdown" class="dropdown-menu">
     <li>
       <%= form_for(resource, :as => resource_name, 
