--- a/app/views/application/nav/_my_trips.html.erb
+++ b/app/views/application/nav/_my_trips.html.erb
@@ -1,6 +1,6 @@
 <li id="my_trips_menu" class="dropdown">
-	<a id="title" href="#" class="dropdown-toggle" data-toggle="dropdown">
-		<%= t(".label") %> <b class="caret"></b>
+	<a id="title" href="#" class="dropdown-toggle main_icons trips" data-toggle="dropdown">
+		
 	</a>
 	<ul class="dropdown-menu">
 		<li role="presentation" class="dropdown-header"><%= t(".as_passenger") %></li>
