--- a/app/views/application/nav/_profile.html.erb
+++ b/app/views/application/nav/_profile.html.erb
@@ -1,8 +1,6 @@
 
 <li id="profile_menu" class="dropdown">
-	<a id="title" href="#" class="dropdown-toggle" data-toggle="dropdown">
-		<%= t("navbar.profile.title") %> <b class="caret"></b>
-	</a>
+	<a id="title" href="#" class="dropdown-toggle main_icons profile" data-toggle="dropdown" class= ""></a>
 	<ul class="dropdown-menu">
 		<li role="presentation" class="dropdown-header"><%= t("navbar.profile.header") %></li>
 
