--- a/app/views/application/_navbar.html.erb
+++ b/app/views/application/_navbar.html.erb
@@ -14,31 +14,35 @@
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
   			<% if user_signed_in? %>
-          <li><%= link_to  "", dashboard_path, class: "home" %></li>
+          <li><%= link_to  "", dashboard_path, class: "home main_icons" %></li>
+          <li><%= link_to  "", contacts_path, class: "messages main_icons" %></li>
           <%= render 'application/nav/profile' %>
           <%= render 'application/nav/my_trips' %>
           <%= render 'application/nav/my_network' %>
           <%= render 'application/nav/my_pages' %>
   			<% else %>
-          <li><%= link_to  "", root_path, class: "home" %></li>
+          <li><%= link_to  "", root_path, class: "home main_icons" %></li>
           <%= render 'popup_signin' %>
-          <li><%= link_to t("navbar.user.sign_up"), new_user_registration_path %></li>
+          <li><%= link_to t("navbar.user.sign_up"), new_user_registration_path, class: "text-nav " %></li>
   			<% end %>	
-        <li class="hidden-sm"><%= link_to t("navbar.how_it_works"), page_path('how_does_hamsafaryab_work') %></li>
-
+        <li class="hidden-sm"><%= link_to t("navbar.how_it_works"), page_path('how_does_hamsafaryab_work'), class: "text-nav" %></li>
       </ul>
 
       <ul class="nav navbar-nav navbar-<%= lang_other_side %>">
-        <li><%= link_to t("navbar.trip.insert"), trips_start_new_trip_path %></li>
-        <li><%= link_to t("navbar.trip.search"), search_search_subtrips_path %></li>
+        <li>
+          <%= link_to "#{t("navbar.trip.insert")}<b class=\"caret actions  register_trip\"></b>".html_safe, trips_start_new_trip_path, class: "text-nav" %>
+
+        </li>
+        <li><%= link_to "#{t("navbar.trip.search")}<b class=\"caret actions  search_subtrip\"></b>".html_safe, search_search_subtrips_path, class: "text-nav" %></li>
 
         <% if current_page?( locale: "fa") %>
-          <li><%= link_to_unless_current t("navbar.language.english"), lang_select_path(lang: "en",  url:  request.original_url) %></li>
+          <li><%= link_to_unless_current t("navbar.language.english"), lang_select_path(lang: "en",  url:  request.original_url), class: "text-nav " %></li>
         <% else %>
-          <li><%= link_to_unless_current t("navbar.language.farsi"), lang_select_path(lang: "fa",  url:  request.original_url) %></li> 
+          <li><%= link_to_unless_current t("navbar.language.farsi"), lang_select_path(lang: "fa",  url:  request.original_url), class: "text-nav " %></li> 
         <% end %>
       </ul>     
 
     </div><!--/.nav-collapse -->
   </div>
 </div>
+
