--- a/app/views/application/nav/_my_network.html.erb
+++ b/app/views/application/nav/_my_network.html.erb
@@ -1,6 +1,6 @@
 <li id="my_trips_menu" class="dropdown">
-	<a id="title" href="#" class="dropdown-toggle" data-toggle="dropdown">
-		<%= t(".label") %> <b class="caret"></b>
+	<a id="title" href="#" class="dropdown-toggle main_icons network" data-toggle="dropdown">
+		
 	</a>
 	<ul class="dropdown-menu">
 		<li><%= link_to t('.invitation_sending'), invitation_path %></li>
