fix bug in contacts and messages and make notification for unread messages

--- a/app/assets/stylesheets/contacts.css.scss
+++ b/app/assets/stylesheets/contacts.css.scss
@@ -1,5 +1,5 @@
 #contact_show{
-	#contact_list{
+	#contacted_users{
 		border: 1px solid #E7E7E7;
 		background: #f0f0f0;
 		padding: 0;
@@ -13,7 +13,7 @@
 				font-weight: bold;
 			}
 		}
-		.contact_list_row{
+		.contacted_users_row{
 			border-bottom: 1px solid #fff;
 			padding: 1px;
 			img{
