--- a/app/views/contacts/_contacted_users.html.erb
+++ b/app/views/contacts/_contacted_users.html.erb
@@ -1,6 +1,6 @@
-<% @contact_list.each do |contact| %>
+<% @contacted_users.each do |contact| %>
 	<% klass = "active" if contact== @receiver%>
-	<div class="contact_list_row <%= klass %>">
+	<div class="contacted_users_row <%= klass %>">
 		<%= gravatar contact,30 , "img-rounded" %>
 	  <%= link_to contact.name, contact_path(contact.slug) %>
 	</div>
