--- a/app/views/contacts/show.html.erb
+++ b/app/views/contacts/show.html.erb
@@ -1,5 +1,5 @@
 <div id="contact_show" class="col-sm-9">
-	<div id="contact_list_header" class="col-sm-3">
+	<div id="contacted_users_header" class="col-sm-3">
 		<h4><%= t(".Friend List") %></h4>
 	</div>
 	<div id="messages_header"  class="col-sm-8">
@@ -7,8 +7,8 @@
 	</div>
 
 
-	<div id="contact_list" class="col-sm-3">
-		<%= render 'contact_list' %>
+	<div id="contacted_users" class="col-sm-3">
+		<%= render 'contacted_users' %>
 	</div>
 
 	<div id="messages_frame" class="col-sm-8">
