--- a/app/assets/stylesheets/navbar.css.scss
+++ b/app/assets/stylesheets/navbar.css.scss
@@ -40,6 +40,23 @@
 	.messages{
 		background: url('https://s3-eu-west-1.amazonaws.com/hamsafaryab.production/static_files/images/icons1.png') .5px 171px;
 	}
+	.notification{
+		padding-bottom: 1px;
+		background-color: #dc0d17;
+		border: 1px solid #eee;
+		font-size: .8em;
+		min-width: 16px;
+		height: 20px;
+		position: absolute;
+		display: inline-block;
+		background-image: -webkit-linear-gradient(top, #fa3c45 0%, #dc0d17 100%);
+		padding: 0px 5px 11px 5px;
+		top: 0px;
+		border-radius: 10px;
+		color: #fff;
+		font-weight: bold;
+		left: 20px;
+	}
 
 	.profile{
 		background: url('https://s3-eu-west-1.amazonaws.com/hamsafaryab.production/static_files/images/icons1.png') -2.5px 104px;;
@@ -57,10 +74,10 @@
 		padding-top: 10px !important;
 	}
 	.actions{
-width: 25px;
-height: 18px;
-text-indent: 43px;
-border: 1px;
+		width: 25px;
+		height: 18px;
+		text-indent: 43px;
+		border: 1px;
 	}
 	.search_subtrip{
 		background-image: url("https://s3-eu-west-1.amazonaws.com/hamsafaryab.production/static_files/images/icons1.png") ;
