--- a/app/views/contacts/index.html.erb
+++ b/app/views/contacts/index.html.erb
@@ -1,30 +1,20 @@
 <div id="contact_show" class="col-sm-9">
-	<div id="contact_list_header" class="col-sm-3">
+	<div id="contacted_users_header" class="col-sm-3">
 		<h4><%= t(".Friend List") %></h4>
 	</div>
+
 	<div id="messages_header"  class="col-sm-8">
-		<% if @receiver %>
-			<h4><%= @receiver.name %></h4>
-			
-		<% end %>
 	</div>
 
 
-	<div id="contact_list" class="col-sm-3">
-		<%= render 'contact_list' %>
+	<div id="contacted_users" class="col-sm-3">
 	</div>
 
 	<div id="messages_frame" class="col-sm-8">
 		<div id="messages"  class="row">
-			<% @messages.each do |message| %>
-				<%= render partial: 'contacts/message_row', locals: {message: message} %>
-			<% end %>
 		</div>‍
 		
 		<div class="message_form" class="row">
-			<% if @receiver %>
-				<p><%= render 'messages/form' %>	</p>
-			<% end %>
 		</div>
 	</div>
 </div>
