--- a/app/views/trips/edit.html.erb
+++ b/app/views/trips/edit.html.erb
@@ -14,7 +14,7 @@
 			<br>
 			<div class="panel-body subtrips_edit_field">
 				<div class="col-xs-12">
-					<%= link_to " #{t("next")} >>", @trip ,class: "btn btn-warning pull-left" %> 
+					<%= link_to " #{t("next")} >>", @trip ,class: "btn btn-warning pull-#{lang_other_side}" %> 
 				</div>	
 			</div>
 		</div>
