--- a/app/views/users/show/_account_settings.html.erb
+++ b/app/views/users/show/_account_settings.html.erb
@@ -5,8 +5,11 @@
     <div class="col-sm-9">
       <p class="form-control-static">
       	*********** &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-      	<%= link_to t('.goto_change_account_settings'), edit_user_registration_path+'#account_settings' %>
       </p>
+    </div>
+
+    <div class="col-sm-9 col-sm-offset-3">
+      <%= link_to t('.goto_change_account_settings'), edit_user_registration_path+'#account_settings' %>
     </div>
   </div>
 </form>
