--- a/app/views/trips/select_driver.html.erb
+++ b/app/views/trips/select_driver.html.erb
@@ -26,7 +26,7 @@
 						  </label>
 						</div>			
 					</div>				
-					<%= submit_tag " #{t("next")} >>", class: "btn btn-warning pull-left" %>
+					<%= submit_tag " #{t("next")} >>", class: "btn btn-warning pull-#{lang_other_side}" %>
 				<% end %>								
 			</div>
 	
