--- a/app/views/users/edit/_contact_details.html.erb
+++ b/app/views/users/edit/_contact_details.html.erb
@@ -6,26 +6,50 @@
  		:wrapper_html => {
  			:class => 'form-group'
  		}, 
- 		:input_html => { 	:class => 'form-control col-sm-8' 	},
- 		label_html: { class: 'col-sm-3' }
+ 		:input_html => { 	:class => 'form-control'}
  	}			) do |f| %>
 
-	<%= f.input :tel %>
+	<div class="col-sm-3">
+		<%= f.label :tel, t('tel') %>
+	</div>
+	<div class="col-sm-8">
+		<%= f.input :tel, label: false %>
+	</div>
 
-	<% if f.object.mobile.blank? %>
-		<%= f.input :mobile, wrapper_html: { class: 'form-group has-error' }, input_html: {:autofocus => true}, placeholder: t(".mobile_placeholder") %>
-	<% else %>		
-		<%= f.input :mobile %>
-	<% end %>
+	<div class="col-sm-3">
+		<%= f.label :mobile, t('mobile') %>
+	</div>
+	<div class="col-sm-8">
+		<% if f.object.mobile.blank? %>
+			<%= f.input :mobile, label: false , wrapper_html: { class: 'form-group has-error' }, input_html: {:autofocus => true}, placeholder: t(".mobile_placeholder") %>
+		<% else %>		
+			<%= f.input :mobile, label: false %>
+		<% end %>
+	</div>
 
-	<% if f.object.city.blank? %>
-		<%= f.input :city, input_html: {id: 'search_subtrip_origin_address'}, wrapper_html: { class: 'form-group has-error' }, placeholder: t(".city_placeholder")  %>
-	<% else %>		
-		<%= f.input :city, input_html: {id: 'search_subtrip_origin_address'}, placeholder: t(".city_placeholder")  %>
-	<% end %>
+	<div class="col-sm-3">
+		<%= f.label :city, t('city') %>
+	</div>
+	<div class="col-sm-8">
+		<% if f.object.city.blank? %>
+			<%= f.input :city, label: false, input_html: {id: 'search_subtrip_origin_address'}, wrapper_html: { class: 'form-group has-error' }, placeholder: t(".city_placeholder")  %>
+		<% else %>		
+			<%= f.input :city, label: false, input_html: {id: 'search_subtrip_origin_address'}, placeholder: t(".city_placeholder")  %>
+		<% end %>
+	</div>	
 
-	<%= f.input :address %>
-	<%= f.button :submit, {class: ' btn-primary col-sm-offset-3'} %>
+	<div class="col-sm-3">
+		<%= f.label :address, t('address') %>
+	</div>
+	<div class="col-sm-8">
+		<%= f.input :address, label: false %>
+	</div>
+
+	<div class="col-sm-3">
+	</div>
+	<div class="col-sm-8">
+		<%= f.button :submit, {class: ' btn-primary col-sm-offset-3'} %>
+	</div>
 	<%= f.hidden_field :tab, :value => "contact_details" %>
 		  
 <% end %>
