--- a/app/views/users/edit/_page_url.html.erb
+++ b/app/views/users/edit/_page_url.html.erb
@@ -1,34 +1,42 @@
 <%= simple_form_for(resource, 
 	as: resource_name, 
 	url: registration_path(resource_name), 
-	html: { method: :put, class: 'form-horizontal' }		) do |f| %>
+	html: { method: :put, class: 'form-horizontal' },
+ 	defaults: { 
+ 		wrapper_html: {
+ 			class: 'form-group'
+ 		}, 
+ 		input_html: { 	class: 'form-control lcol-sm-8' 	},
+ 		label_html: { class: 'col-sm-3' }
+ 	}			) do |f| %>
 
-		<% unless @user.slug_updated %>
-			<div class="alert alert-danger text-center">
-				<%= t (".change_url_message") %>
-			</div>	
-		<% end %>
 
-		<% if f.object.slug_updated %>
-			<div class="well">
-			<p class="text-center">
-				<%=t '.your_url_is' %>				
-				<strong>
-					<%= link_to_profile(@user,"") %>					
-				</strong>
-			</p>
-			</div>
-		<% else %>
-		<div class="userurl_input form-group">	
-			<span class="hamsafaryaburl">www.hamsafaryab.com</span>
-			<span class="slash">/</span>
-			<%= f.label :slug, "Profile Url", class: "control-label col-sm-3" %>
-			<div class="col-sm-8">
-				<%= f.text_field :slug,:value => '', placeholder: "Enter your desired url", class: "form-control" %>
-			</div>
+	<% unless @user.slug_updated %>
+		<div class="alert alert-danger text-center">
+			<%= t (".change_url_message") %>
+		</div>	
+	<% end %>
 
+	<% if f.object.slug_updated %>
+		<div class="well">
+		<p class="text-center">
+			<%=t '.your_url_is' %>
+			<strong>
+				<%= link_to_profile(@user,"") %>					
+			</strong>
+		</p>
 		</div>
-		<%= f.button :submit, {class: ' btn-primary col-sm-offset-3'} %>
+	<% else %>
+		<div class="userurl_input">
+			<div class="col-sm-3">
+				<%= f.label :slug, t(".Profile Url"), class: "control-label" %>
+			</div>	
+			<div class="col-sm-8">
+				<span class="hamsafaryaburl">www.hamsafaryab.com/</span>
+				<%= f.input :slug, label: false, placeholder: t(".Enter your desired url"), input_html: {:value => ''}%>
+			</div>
+		</div>
+		<%= f.button :submit, {class: ' btn-primary col-sm-3 col-sm-offset-3'} %>
 		<%= f.hidden_field :tab, :value => "page_url" %>			
-		<% end %>			
+	<% end %>			
 <% end %>
