add details column to user

--- a/app/views/profiles/show/_single_profile.html.erb
+++ b/app/views/profiles/show/_single_profile.html.erb
@@ -18,6 +18,10 @@
 				<th><%= User.human_attribute_name("age") %></th>
 				<th><%=  @profile.user.age %></th>
 			</tr>
+			<tr>
+				<th><%= User.human_attribute_name("details") %></th>
+				<th><%=  @profile.user.details %></th>
+			</tr>
 		</tbody>
 	</table>
 </div>
