--- a/app/views/users/show/_personal_profile.html.erb
+++ b/app/views/users/show/_personal_profile.html.erb
@@ -4,6 +4,8 @@
 	<%= user_form_control_static  User.human_attribute_name("gender"), t_gender(@user.gender) %>
 	<%= user_form_control_static  User.human_attribute_name("age"), @user.age %>
 
+	<%= user_form_control_static  User.human_attribute_name("details"), @user.details %>
+
   <%= link_to t('.goto_change_personal_profile'), edit_user_registration_path+'#personal_profile', class: 'btn btn-link col-sm-offset-3' %>
   
 </form>
