--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -5,7 +5,7 @@
 		    <h3 class="panel-title col-xs-8">
 		    	<%= @user.name.titleize %> <%= t (".title") %>
 		    </h3>
-				<div class="pull-left">
+				<div class="pull-<%= lang_other_side %>">
 					<%= gravatar @user, 85, "img-thumbnail", :square %>
 				</div>		    	   
 		  </div>
