--- a/app/views/users/edit/_page_url.html.erb
+++ b/app/views/users/edit/_page_url.html.erb
@@ -36,7 +36,7 @@
 				<%= f.input :slug, label: false, placeholder: t(".Enter your desired url"), input_html: {:value => ''}%>
 			</div>
 		</div>
-		<%= f.button :submit, {class: ' btn-primary col-sm-3 col-sm-offset-3'} %>
+		<%= f.button :submit, {class: ' btn-primary col-sm-offset-3'} %>
 		<%= f.hidden_field :tab, :value => "page_url" %>			
 	<% end %>			
 <% end %>
